--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
         <link rel="stylesheet" href="css/responsive.css"/>
         <link rel="stylesheet" href="css/beauty-salon.css" />
     </head>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2QJDX38NKE"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-2QJDX38NKE');
+    </script>
+
     <body data-mobile-nav-trigger-alignment="right" data-mobile-nav-style="modern" data-mobile-nav-bg-color="#2E3844" class="custom-cursor">
         <!-- start cursor -->
         <div class="cursor-page-inner">
@@ -71,7 +82,7 @@
         </header>
         <!-- end header -->
         <!-- start banner slider -->
-        <section class="pb-0 top-space-padding bg-dark-gray full-screen border-top position-relative md-h-700px sm-h-600px sm-pb-70px" data-parallax-background-ratio="0.3" style="background-image: url('images/resized_image_2500x750.png')">
+        <section class="pb-0 top-space-padding bg-dark-gray full-screen border-top position-relative md-h-700px sm-h-600px sm-pb-70px" data-parallax-background-ratio="0.3" style="background-image: url('images/holidays-beauty-spring-concept-carefree-happy-attractive-blond-girl-white-dress-holding-yellow-tulips-laughing-with-pleased-expression-standing-pink-background-have-romantic-date.png')">
             <div class="position-absolute left-0px top-0px d-none d-lg-inline-block" data-anime='{ "el": "childs", "translateY": [100, 0], "opacity": [0,1], "duration": 600, "delay": 600, "staggervalue": 300, "easing": "easeOutQuad" }'>
                 <img src="images/demo-beauty-salon-home-banner-bg.png" data-bottom-top="transform: translateY(-150px)" data-top-bottom="transform: translateY(150px)" alt="">
             </div>
