--- a/story.html
+++ b/story.html
@@ -69,6 +69,15 @@
             </nav>
             <!-- end navigation --> 
         </header>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-2QJDX38NKE"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-2QJDX38NKE');
+        </script>
         <!-- end header -->
         <!-- start page title -->
         <section class="page-title-big-typography bg-dark-gray cover-background pb-0 top-space-padding" style="background-image: url(images/demo-beauty-salon-title-bg.jpg)">
