--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
         <meta name="description" content="Elevate your online presence with Crafto - a modern, versatile, multipurpose Bootstrap 5 responsive HTML5, SCSS template using highly creative 52+ ready demos.">
         <!-- favicon icon -->
-        <link rel="shortcut icon" href="images/favicon.png">
-        <link rel="apple-touch-icon" href="images/apple-touch-icon-57x57.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+        <link rel="shortcut icon" href="images/favicon_io/favicon-32x32.png">
+        <link rel="apple-touch-icon" href="images/favicon_io/apple-touch-icon.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="images/favicon_io/apple-touch-icon.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="images/favicon_io/apple-touch-icon.png">
         <!-- google fonts preconnect -->
         <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -47,9 +47,9 @@
                 <div class="container-fluid">
                     <div class="col-auto col-xxl-3 col-lg-2 me-lg-0 me-auto">
                         <a class="navbar-brand" href="index.html">
-                            <img src="images/demo-beauty-salon-logo-white.png" data-at2x="images/demo-beauty-salon-logo-white@2x.png" alt="" class="default-logo">
-                            <img src="images/demo-beauty-salon-logo-black.png" data-at2x="images/demo-beauty-salon-logo-black@2x.png" alt="" class="alt-logo">
-                            <img src="images/demo-beauty-salon-logo-black.png" data-at2x="images/demo-beauty-salon-logo-black@2x.png" alt="" class="mobile-logo"> 
+                            <img src="images/favicon_io (1)/android-chrome-512x512.png" data-at2x="images/favicon_io (1)/android-chrome-512x512.png" alt="" class="default-logo">
+                            <img src="images/favicon_io (1)/android-chrome-512x512.png" data-at2x="images/favicon_io (1)/favicon-32x32.png" alt="" class="alt-logo">
+                            <img src="images/favicon_io (1)/android-chrome-192x192.png" data-at2x="images/favicon_io (1)/apple-touch-icon.png" alt="" class="mobile-logo">
                         </a>
                     </div>
                     <div class="col-auto menu-order position-static">
@@ -87,7 +87,7 @@
                 <img src="images/demo-beauty-salon-home-banner-bg.png" data-bottom-top="transform: translateY(-150px)" data-top-bottom="transform: translateY(150px)" alt="">
             </div>
             <div class="pe-8 pt-8 absolute-middle-right lg-pe-2 lg-pt-2 d-none d-lg-inline-block">
-                <img src="images/delivery.png" class="animation-rotation" alt="">
+                <img src="images/FREE_DELIVERY_POST_TEMPLATE-removebg-preview.png" class="animation-rotation" alt="">
             </div>
             <div class="container h-100">
                 <div class="row align-items-center h-100">
@@ -99,7 +99,7 @@
                         <div class="text-light-medium-gray fs-20 w-60 mb-35px xs-mb-25px lg-w-75 md-w-100 sm-w-70 xs-w-90">Experience elegance with our designer-inspired flower bags</div>
                         <a href="contact.html" class="btn btn-extra-large btn-base-color btn-hover-animation-switch btn-round-edge btn-box-shadow">
                             <span>
-                                <span class="btn-text">Shop now  &nbsp;<ion-icon name="chevron-forward-outline"></ion-icon></span>
+                                <span class="btn-text">Order now  &nbsp;<ion-icon name="chevron-forward-outline"></ion-icon></span>
 <!--                                <span class="btn-icon"><i class="fa-solid fa-arrow-right fs-14"></i></span>-->
 <!--                                <span class="btn-icon"><i class="fa-solid fa-arrow-right fs-14"></i></span>-->
                             </span>
